some alignment fixes

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 .centered-container {
-    max-width: 60vw;
+    max-width: 700px;
     margin:auto;
 }
 
